@@ -1,4 +1,5 @@
 import { Fun } from '@ephox/katamari';
+import { SugarElement, TextContent } from '@ephox/sugar';
 import { SimpleGenerators } from 'ephox/snooker/api/Generators';
 
 export default (): SimpleGenerators => {
@@ -18,10 +19,16 @@ export default (): SimpleGenerators => {
     return r;
   };
 
-  const replace = (name: string) => {
-    const r = 'h(' + name + ')_' + replaceCounter;
-    replaceCounter++;
-    return r;
+  const replace = (elem: SugarElement<Node> | string | number) => {
+    if (typeof elem === 'string' || typeof elem === 'number') {
+      const r = `h(${ elem })_${ replaceCounter }`;
+      replaceCounter++;
+      return r;
+    } else {
+      TextContent.set(elem, `h(${ TextContent.get(elem) })_${ replaceCounter }`);
+      replaceCounter++;
+      return elem;
+    }
   };
 
   return {
