@@ -12,7 +12,7 @@ import { fakeEvent } from '../module/Helpers';
 
 describe('browser.tinymce.plugins.charmap.SearchTest', () => {
   before(function () {
-    // TODO: TINY-6598: Test is broken on Chromium Edge 86, so we need to investigate
+    // TODO: TINY-6905: Test is broken on Chromium Edge 86, so we need to investigate
     const platform = PlatformDetection.detect();
     if (platform.browser.isChrome() && platform.os.isWindows()) {
       this.skip();
